--- a/level2/test1.html
+++ b/level2/test1.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
     <!-- Required meta tags -->
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
+
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+
 
     <title>var let const 변수와 변수의 활용법</title>
 
@@ -73,57 +75,7 @@
     <a id="open_modal" class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 </div>
 
-
-
-<script>
-
-
-    // 모달창 열기
-    $('#open_modal').on('click',function(){
-        $('.black-background').fadeIn();
-    })
-
-    // 모달창 닫기
-    $('#close_modal').on('click',function(){
-        $('.black-background').fadeOut();
-    })
-
-    // nav 아코디언 메뉴
-    $('#nav-sub-button').click(function(){
-        $('.nav-sub').slideToggle();
-    });
-
-
-    // 만약에 이메일 input에 입력된 값이 빈칸인 경우, 폼의 전송을 막음, 안내문을 띄움
-    // 만약에 패스워드 input에 입력된 값이 빈칸인 경우, 폼의 전송을 막음, 안내문 띄움
-
-    /*
-    var 이름 = 'John asbs sdfdsa sdf';
-    var 나이 = '29';
-    자바스크립트는 html 요소를 찾는게 느리다. 변수로 요소를 담아서 사용하면 더 빨르게 찾을수있어서 변수를 활용해서 사용하자
-
-    변수마스터
-    1. 선언 : var 나이 (변수를 만들겠소)
-    2. 할당 :
-    3. 범위
-    */
-
-    // 셀렉터로 찾은 요소를 변수로 담아보자.
-    var emailValue = $('#exampleInputEmail1');
-    var passwordValue = $('#exampleInputPassword1');
-    $('form').on('submit',function(e){
-        if( emailValue.val() == ''){
-            e.preventDefault();
-            alert('이메일을 입력해주세요')
-        }if(passwordValue.val() == ''){
-            e.preventDefault();
-            alert('패스워드를 입력해주세요')
-        }
-    });
-
-</script>
-
-
+<script src="js/test1.js"></script>
 
 </body>
 </html>
