--- a/level2/test3.html
+++ b/level2/test3.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
-    <title>애니메이션 UI 1 : jQuery Animate 함수</title>
+    <title>애니메이션 UI 2 : Slide Down 모달창 만들기 & 애니메이션 필수 팁</title>
 
     <style>
         .main-background{
@@ -27,8 +27,11 @@
             z-index: 5;
             width: 100%;
             height: 100%;
-            bottom:100%;
+            top:-1000px;
+            transition:2s;
         }
+
+        .action{top:0;}
 
         .white-background{
             background: #fff;
@@ -45,9 +48,7 @@
             color:#fff;
             position:fixed;
             margin-left:-150px;
-
         }
-
 
     </style>
 </head>
@@ -94,7 +95,7 @@
 
 
 <!--<script src="js/test1.js"></script>-->
-<script src="js/test2.js"></script>
+<script src="js/test3.js"></script>
 
 </body>
 </html>
