--- a/level2/test5.html
+++ b/level2/test5.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
-    <title>애니메이션 UI 2 : Slide Down 모달창 만들기 & 애니메이션 필수 팁</title>
+    <title>정규식 숙제 : 비밀번호 검증하기</title>
 
     <style>
         .main-background{background:url(https://source.unsplash.com/random);background-size: cover;color:#fff;}
@@ -65,7 +65,7 @@
 
 
 <!--<script src="js/test1.js"></script>-->
-<script src="js/test3.js"></script>
+<script src="js/test5.js"></script>
 
 </body>
 </html>
